--- a/index.html
+++ b/index.html
@@ -1,32 +1,47 @@
-<div class="topbar">
-<div class="global-nav">
-<div class="global-nav-inner">
-<div class="container">
-<div role="navigation">
-<ul class="nav" id="global-actions">
-<li id="global-nav-home" class="home">
-							<a href="#">
-
-								<span class="text">Home</span>
-							</a>
-						</li>
-<li class="people active">
-							<a href="#">
-								 <span class="text">Connect</span>
-							</a>
-						</li>
-<li class="topics">
-							<a href="#">
-<span class="text">Discover</span>
-							</a>
-						</li>
-<li class="profile">
-							<a href="#">
-								</span> <span class="text">Me</span>
-							</a>
-						</li>
-</ul></div>
-</div>
-</div>
-</div>
-</div>
+<!DOCTYPE html>
+<html>
+  <head>
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
+    <div class="topbar">
+      <div class="global-nav">
+        <div class="global-nav-inner">
+          <div class="container">
+          	<div class="logo">
+          		<img src="nhlogopro.jpg">
+          	</div>
+            <div role="navigation">
+              <ul class="nav" id="global-actions">
+                <li id="global-nav-home" class="home">
+                  <a href="home.html">
+                    <span class="text active">Home</span>
+                  </a>
+                </li>
+                <li class="people">
+                  <a href="index.html">
+                    <span class="text">Connect</span>
+                  </a>
+                </li>
+                <li class="topics">
+                  <a href="index.html">
+                    <span class="text">Discover</span>
+                  </a>
+                </li>
+                <li class="profile">
+                  <a href="index.html">
+                    </span>
+                    <span class="text">Me</span>
+                  </a>
+                </li>
+              </ul>
+            </div>
+            <div class="email" >
+          		<p>heraud260@gmail.com</p>
+          	</div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
+</html>
