--- a/home.html
+++ b/home.html
@@ -15,7 +15,7 @@
         <div class="global-nav-inner">
           <div class="container">
             <div class="logo">
-              <img src="nhlogopro.jpg">
+              <a href="index.html"><img src="nhlogopro.jpg"></a>
             </div>
             <div role="navigation">
               <ul class="nav" id="global-actions">
