--- a/discover.html
+++ b/discover.html
@@ -1,29 +1,27 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.css" integrity="sha512-wR4oNhLBHf7smjy0K4oqzdWumd+r5/+6QO/vDda76MW5iug4PT7v86FoEkySIJft3XA0Ae6axhIvHrqwm793Nw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css" integrity="sha512-17EgCFERpgZKcm0j0fEq1YCJuyAWdz9KUtv1EjVuaOz8pDnh/0nZxmU6BBXwaaxqoi9PQXnRWqlcDB027hgv9A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="discoverstyle.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.min.js" integrity="sha512-XtmMtDEcNz2j7ekrtHvOVR4iwwaD6o/FUJe6+Zq+HgcCsk3kj4uSQQR8weQ2QVj1o0Pk6PwYLohm206ZzNfubg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script src="slick.js"></script>
-    <script src="homejs.js" type="text/javascript"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick.css" integrity="sha512-wR4oNhLBHf7smjy0K4oqzdWumd+r5/+6QO/vDda76MW5iug4PT7v86FoEkySIJft3XA0Ae6axhIvHrqwm793Nw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.8.1/slick-theme.min.css" integrity="sha512-17EgCFERpgZKcm0j0fEq1YCJuyAWdz9KUtv1EjVuaOz8pDnh/0nZxmU6BBXwaaxqoi9PQXnRWqlcDB027hgv9A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="homestyle.css">
-    <link rel="stylesheet" href="indexstyle.css">
-    
+    <script src="indexjs.js" type="text/javascript"></script>
   </head>
   <body>
     <div class="topbar">
       <div class="global-nav">
         <div class="global-nav-inner">
           <div class="container">
-            <div class="logo">
-              <a href="index.html"><img src="nhlogopro.jpg"></a>
-            </div>
+          	<div class="logo">
+          		<img src="nhlogopro.jpg">
+          	</div>
             <div role="navigation">
               <ul class="nav" id="global-actions">
                 <li id="global-nav-home" class="home">
-                  <a href="index.html">
-                    <span class="text">Home</span>
+                  <a href="home.html">
+                    <span class="text active">Home</span>
                   </a>
                 </li>
                 <li class="people">
@@ -32,7 +30,7 @@
                   </a>
                 </li>
                 <li class="topics">
-                  <a href="discover.html">
+                  <a href="index.html">
                     <span class="text">Discover</span>
                   </a>
                 </li>
@@ -44,15 +42,24 @@
                 </li>
               </ul>
             </div>
-            <div class="email">
-              <p>heraud260@gmail.com</p>
-            </div>
+            <div class="email" >
+          		<p>heraud260@gmail.com</p>
+          	</div>
           </div>
         </div>
       </div>
     </div>
-  <div id="main">
-    <p id="maintenance-text">Le site web est actuellement en maintenance<br>Merci de revenir plus tard. </p>
-  </div>
+    <div class="slideshow">
+      <div class="slider slider-1">
+        <div class="item">
+          <img src="s5.jpg">
+        </div>
+        <div class="item">
+          <img src="s4.jpg">
+        </div>
+        <div class="item">
+          <img src="s3.jpg">
+        </div>
+      </div>
+    </div>    
   </body>
-</html>
